# CUDA_KNN

./: CMakeLists.txt  Makefile  README.md  Readme.md  benchmark.sh  dataset_gen.py  knn.cu  knn.h  knn_cuda  main.cu  sklearn_imp.py
csvs/: X_test.csv  X_train.csv  dataset_gen.py  test  y_test.csv  y_train.csv
distance_kernels/: distance.cu  distance_parse.cpp  distance_parse.cu  l1_distance.cu  l2_distance.cu
evaluate/: evaluation.cu
includes/: distance_kernels.h  evaluation.h  globals.h
